<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/pay_Button"
        style="@style/MD3.Button"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="5dp"
        android:text="@string/pay"
        app:iconTint="?android:colorBackground"
        app:icon="@drawable/ic_attach_money_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pay_textLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/pay_with_wallet"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pay_Button"
        app:layout_constraintStart_toStartOf="@+id/pay_textLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_Button">
    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pay_textLayout"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toStartOf="@+id/pay_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pay_Button"
        app:layout_constraintWidth_percent="0.45">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pay_textEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="0123456789.,"
            android:hint="@string/amount_spent_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>