<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_balance"
            android:textAlignment="textStart"
            android:textSize="48sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_funds_textLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintWidth_percent="0.45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_funds_textEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789.,"
                android:hint="@string/amount_to_add_hint"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expenseName_textLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintWidth_percent="0.45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expenseName_textEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_funds_button"
            style="@style/MD3.Button"
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_to_balance"
            app:icon="@drawable/ic_add_black_24dp"
            app:iconTint="?android:colorBackground"
            app:layout_constraintWidth_percent="0.45" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>